# sts2-mod-manager

./: .gitignore  .npmrc  AGENTS.md  README.md  feature_list.json  init.sh  main.js  nexus-mods-listing.md  package-lock.json  package.json  pnpm-lock.yaml  post_draft.md  preload.js  release_notes_v1.1.0.md  run-electron.bat  session-handoff.md  tailwind.config.js  webpack.config.js  webpack.tauri.config.js
.claude/: settings.local.json
.codemap/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.github/workflows/: build-windows.yml  build.yml
.omc/: project-memory.json
.omc/state/: agent-replay-0af26461-6e00-4bb6-a8dc-45246fbfc9e8.jsonl  hud-stdin-cache.json  last-tool-error.json
.omc/state/sessions/0af26461-6e00-4bb6-a8dc-45246fbfc9e8/: hud-state.json  session-started.json  ultrawork-state.json
.planning/phases/02-custom-display-name-and-local-update-time/: 02-01-SUMMARY.md
dist-tauri/: index.html  output.css
docs/superpowers/plans/: 2026-05-16-mod-manager-enhancement.md
src/: App.jsx  index-tauri.jsx  index.html  output.css  tauri-api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  game.rs  lib.rs  logs.rs  main.rs  mods.rs  profiles.rs  saves.rs  translate.rs  translations.rs
src/components/: LogViewer.jsx  ModCard.jsx  ModDetail.jsx  ModListItem.jsx  ProfileManager.jsx  SaveManager.jsx  Sidebar.jsx  TitleBar.jsx
